--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "babel-loader": "^9.2.1",
     "dompurify": "^3.2.0",
     "marked": "^15.0.0",
     "next": "15.0.3",
