filetree almost there, just missing click to select support for individual files

--- a/package.json
+++ b/package.json
@@ -12,8 +12,10 @@
     "dompurify": "^3.2.0",
     "marked": "^15.0.0",
     "next": "15.0.3",
-    "react": "19.0.0-rc-66855b96-20241106",
-    "react-dom": "19.0.0-rc-66855b96-20241106"
+    "next-cloudinary": "^6.16.0",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
+    "react-dropzone": "^14.3.5"
   },
   "devDependencies": {
     "@babel/preset-react": "^7.25.9",
